--- a/notebooks/Webinar_1/MovingAverage.ipynb
+++ b/notebooks/Webinar_1/MovingAverage.ipynb
@@ -1,25 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1595870860681",
-   "display_name": "Python 3.7.1 64-bit ('bqnt-2.227.0': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "markdown",
@@ -61,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,30 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe = pd.read_csv('../data/TSLA.csv')\n",
+    "dataframe = pd.read_csv('../../data/TSLA.csv')\n",
     "dataframe.set_index('Date', inplace=True)\n",
     "dataframe.drop('Volume',axis=1,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "                 Open   High        Low      Close  Adj Close\nDate                                                         \n2010-06-29  19.000000  25.00  17.540001  23.889999  23.889999\n2010-06-30  25.790001  30.42  23.299999  23.830000  23.830000\n2010-07-01  25.000000  25.92  20.270000  21.959999  21.959999\n2010-07-02  23.000000  23.10  18.709999  19.200001  19.200001\n2010-07-06  20.000000  20.00  15.830000  16.110001  16.110001",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Adj Close</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2010-06-29</th>\n      <td>19.000000</td>\n      <td>25.00</td>\n      <td>17.540001</td>\n      <td>23.889999</td>\n      <td>23.889999</td>\n    </tr>\n    <tr>\n      <th>2010-06-30</th>\n      <td>25.790001</td>\n      <td>30.42</td>\n      <td>23.299999</td>\n      <td>23.830000</td>\n      <td>23.830000</td>\n    </tr>\n    <tr>\n      <th>2010-07-01</th>\n      <td>25.000000</td>\n      <td>25.92</td>\n      <td>20.270000</td>\n      <td>21.959999</td>\n      <td>21.959999</td>\n    </tr>\n    <tr>\n      <th>2010-07-02</th>\n      <td>23.000000</td>\n      <td>23.10</td>\n      <td>18.709999</td>\n      <td>19.200001</td>\n      <td>19.200001</td>\n    </tr>\n    <tr>\n      <th>2010-07-06</th>\n      <td>20.000000</td>\n      <td>20.00</td>\n      <td>15.830000</td>\n      <td>16.110001</td>\n      <td>16.110001</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataframe.head()"
    ]
@@ -112,24 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "GridBox(children=(Figure(animation_duration=500, axes=[Axis(scale=DateScale()), Axis(label='Returns', label_of…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "10dab98df3104480b215b2a9d782a2e2"
-      }
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# Generate some random data to work with\n",
     "np.random.seed(5)\n",
     "dates = pd.date_range(end='2019-01-01', periods=120, freq='M')\n",
@@ -248,15 +203,29 @@
     "                           \"columns range\"\n",
     "                           \"columns display\"'''})\n",
     "# Display the visualizaiton\n",
-    "grid\n"
+    "grid"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "jupyter-masterclass",
+   "language": "python",
+   "name": "jupyter-masterclass"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
