Adding materials for webinar 3

--- a/notebooks/Webinar_2/Develop part 2_solutions.ipynb
+++ b/notebooks/Webinar_2/Develop part 2_solutions.ipynb
@@ -115,8 +115,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### 4. Using a JSON file as your data source\n",
     "*JSON* or JavaScript Object Notation is a open standard file format and data interchange format.\n",
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +142,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>description</th>\n",
+       "      <th>designation</th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>province</th>\n",
+       "      <th>region_1</th>\n",
+       "      <th>region_2</th>\n",
+       "      <th>taster_name</th>\n",
+       "      <th>taster_twitter_handle</th>\n",
+       "      <th>title</th>\n",
+       "      <th>variety</th>\n",
+       "      <th>winery</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Aromas include tropical fruit, broom, brimston...</td>\n",
+       "      <td>Vulkà Bianco</td>\n",
+       "      <td>87</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sicily &amp; Sardinia</td>\n",
+       "      <td>Etna</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Kerin O’Keefe</td>\n",
+       "      <td>@kerinokeefe</td>\n",
+       "      <td>Nicosia 2013 Vulkà Bianco  (Etna)</td>\n",
+       "      <td>White Blend</td>\n",
+       "      <td>Nicosia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>This is ripe and fruity, a wine that is smooth...</td>\n",
+       "      <td>Avidagos</td>\n",
+       "      <td>87</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Douro</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Roger Voss</td>\n",
+       "      <td>@vossroger</td>\n",
+       "      <td>Quinta dos Avidagos 2011 Avidagos Red (Douro)</td>\n",
+       "      <td>Portuguese Red</td>\n",
+       "      <td>Quinta dos Avidagos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Tart and snappy, the flavors of lime flesh and...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>87</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>Willamette Valley</td>\n",
+       "      <td>Willamette Valley</td>\n",
+       "      <td>Paul Gregutt</td>\n",
+       "      <td>@paulgwine</td>\n",
+       "      <td>Rainstorm 2013 Pinot Gris (Willamette Valley)</td>\n",
+       "      <td>Pinot Gris</td>\n",
+       "      <td>Rainstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Pineapple rind, lemon pith and orange blossom ...</td>\n",
+       "      <td>Reserve Late Harvest</td>\n",
+       "      <td>87</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>Lake Michigan Shore</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Alexander Peartree</td>\n",
+       "      <td>None</td>\n",
+       "      <td>St. Julian 2013 Reserve Late Harvest Riesling ...</td>\n",
+       "      <td>Riesling</td>\n",
+       "      <td>St. Julian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>US</td>\n",
+       "      <td>Much like the regular bottling from 2012, this...</td>\n",
+       "      <td>Vintner's Reserve Wild Child Block</td>\n",
+       "      <td>87</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>Willamette Valley</td>\n",
+       "      <td>Willamette Valley</td>\n",
+       "      <td>Paul Gregutt</td>\n",
+       "      <td>@paulgwine</td>\n",
+       "      <td>Sweet Cheeks 2012 Vintner's Reserve Wild Child...</td>\n",
+       "      <td>Pinot Noir</td>\n",
+       "      <td>Sweet Cheeks</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    country                                        description  \\\n",
+       "0     Italy  Aromas include tropical fruit, broom, brimston...   \n",
+       "1  Portugal  This is ripe and fruity, a wine that is smooth...   \n",
+       "2        US  Tart and snappy, the flavors of lime flesh and...   \n",
+       "3        US  Pineapple rind, lemon pith and orange blossom ...   \n",
+       "4        US  Much like the regular bottling from 2012, this...   \n",
+       "\n",
+       "                          designation  points  price           province  \\\n",
+       "0                        Vulkà Bianco      87    NaN  Sicily & Sardinia   \n",
+       "1                            Avidagos      87   15.0              Douro   \n",
+       "2                                None      87   14.0             Oregon   \n",
+       "3                Reserve Late Harvest      87   13.0           Michigan   \n",
+       "4  Vintner's Reserve Wild Child Block      87   65.0             Oregon   \n",
+       "\n",
+       "              region_1           region_2         taster_name  \\\n",
+       "0                 Etna               None       Kerin O’Keefe   \n",
+       "1                 None               None          Roger Voss   \n",
+       "2    Willamette Valley  Willamette Valley        Paul Gregutt   \n",
+       "3  Lake Michigan Shore               None  Alexander Peartree   \n",
+       "4    Willamette Valley  Willamette Valley        Paul Gregutt   \n",
+       "\n",
+       "  taster_twitter_handle                                              title  \\\n",
+       "0          @kerinokeefe                  Nicosia 2013 Vulkà Bianco  (Etna)   \n",
+       "1            @vossroger      Quinta dos Avidagos 2011 Avidagos Red (Douro)   \n",
+       "2           @paulgwine       Rainstorm 2013 Pinot Gris (Willamette Valley)   \n",
+       "3                  None  St. Julian 2013 Reserve Late Harvest Riesling ...   \n",
+       "4           @paulgwine   Sweet Cheeks 2012 Vintner's Reserve Wild Child...   \n",
+       "\n",
+       "          variety               winery  \n",
+       "0     White Blend              Nicosia  \n",
+       "1  Portuguese Red  Quinta dos Avidagos  \n",
+       "2      Pinot Gris            Rainstorm  \n",
+       "3        Riesling           St. Julian  \n",
+       "4      Pinot Noir         Sweet Cheeks  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a.head()"
    ]
