Removing api token

--- a/notebooks/Webinar_3/Develop part 3.ipynb
+++ b/notebooks/Webinar_3/Develop part 3.ipynb
@@ -623,7 +623,7 @@
     "# def get_closing_prices(security_id, start_date, end_date):\n",
     "    \n",
     "#     # string to connect to the API    \n",
-    "#     api_str ='https://finnhub.io/api/v1/stock/candle?symbol={stock}&resolution=D&from={start_dt}&to={end_dt}&token=btfv3kf48v6rl6gbv550'\n",
+    "#     api_str ='https://finnhub.io/api/v1/stock/candle?symbol={stock}&resolution=D&from={start_dt}&to={end_dt}&token='\n",
     "#     # sending the request\n",
     "#     r = requests.get(api_str.format(start_dt=start_date, end_dt = end_date, stock=security_id))\n",
     "#     data =r.json()\n",
