Adding instruction for market data API token

--- a/notebooks/Webinar_3/Develop part 3.ipynb
+++ b/notebooks/Webinar_3/Develop part 3.ipynb
@@ -603,7 +603,9 @@
    "source": [
     "## Basic stocks performance analysis\n",
     "In stocks investing, you need to be able to asset your perfromance. \n",
-    "The basic way to do so, consite into looking at stock returns over a period of time."
+    "The basic way to do so, consite into looking at stock returns over a period of time.\n",
+    "\n",
+    "**Important**: Please go to *finnhub.io* to create a free API token. This API token will allow you to download the necessary data."
    ]
   },
   {
