--- a/notebooks/Webinar_5/interactive_visualization.ipynb
+++ b/notebooks/Webinar_5/interactive_visualization.ipynb
@@ -9,13 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## A common analyst workflow"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,8 +18,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
-    "import matplotlib.pyplot as plt\n",
-    "import bqplot.pyplot as blt\n",
+    "import matplotlib.pyplot as mplt\n",
+    "import bqplot.pyplot as plt\n",
     "from utils.plot_utils import set_style # Helper function for nicer looking plots."
    ]
   },
@@ -44,77 +37,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating some data\n",
-    "#### Monte Carlo Simulation\n",
-    "A simple method for simulation the evolution of an asset price.\n",
-    "\n",
-    "$$\\Large S_{t} = S_0 e^{(r - 0.5\\sigma^2)dt + \\sigma \\sqrt{dt}z}$$\n",
-    "$$ z \\sim N(0, 1)$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Some parameters\n",
-    "S_0 = 100 # Asset price at inceptiom\n",
-    "r = 0.01 # \"Risk free\" rate (interest rate)\n",
-    "sigma = 0.05 # Volatility (standard deviation of price)\n",
-    "paths = 1000 # Number of simulations\n",
-    "steps = 252 # Number of steps\n",
-    "years = 5 # Time horizon for simulation\n",
-    "dt = years/252 # Time step"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Simulation\n",
-    "S = np.zeros((steps, paths)) # Matrix of paths and their steps. Columns are paths, rows steps.\n",
-    "S[0] = S_0 # Initial price\n",
-    "for i in range(1, steps):\n",
-    "    # Applying the formula above in a row-wise fshion\n",
-    "    S[i] = S[i-1] * np.exp((r - 0.5 * sigma**2) * dt + sigma * np.sqrt(dt) * np.random.standard_normal(paths))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color: orange\">So what does it look like?</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment to see the output\n",
-    "# pd.DataFrame(S)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.DataFrame(S).plot(legend=False, figsize=(16,9));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Why do we need to visualize our data?\n",
     "There are many reasons, of course, but a few important ones which come to mind are:\n",
     "1. <span style=\"color: orange; font-size:16px\">Easier to read.</span> Think of the stock price of a company. If you want to see how the company has been doing over time, it's harder to try and read through the data in a tabular format. A line chart makes achieving this task much easier.\n",
+    "2. <span style=\"color: orange; font-size:16px\">Quality check.</span> It is easier to detect outliers when looking at a chart compared to a table.\n",
     "2. <span style=\"color: orange; font-size:16px\">Telling a story.</span>  \"A picture is worth a thousand words\" may sound like a cliche, but it really is not. A chart well done can convey a much more compelling story than narration.\n",
     "3. <span style=\"color: orange; font-size:16px\">Summary statistics and other information which is derived from data can be very misleading.</span>  Point in case \"Datasaurus\".\n",
     "\n",
@@ -183,7 +109,7 @@
    "outputs": [],
    "source": [
     "# Using matplotlib\n",
-    "fig, axes = plt.subplots(1,2, figsize=(16,4))\n",
+    "fig, axes = mplt.subplots(1,2, figsize=(16,4))\n",
     "axes[0].scatter(x_data, y_fake_dots)\n",
     "axes[1].plot(x_data, y_fake_line);"
    ]
@@ -202,8 +128,9 @@
    "outputs": [],
    "source": [
     "# Using bqplot\n",
-    "blt.plot(x_data, y_fake_line)\n",
-    "blt.show()"
+    "plt.figure()\n",
+    "plt.plot(x_data, y_fake_line)\n",
+    "plt.show()"
    ]
   },
   {
@@ -255,8 +182,54 @@
    "outputs": [],
    "source": [
     "# Data\n",
-    "x_data, y_data = generate_fake_stock_price(100)\n",
-    "\n",
+    "x_data, y_data = generate_fake_stock_price(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pyplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple interface, great for quick plots. But not very configurable!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(x_data, y_data);\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Object Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Low level API. Very powerful and configurable!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Creating the bqplot chart objects\n",
     "sc_x = bqp.LinearScale()\n",
     "sc_y = bqp.LinearScale()\n",
@@ -407,6 +380,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Some more line chart examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Two lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(100)\n",
+    "y = np.cumsum(np.random.randn(2, 100), axis=1) #two random walks\n",
+    "\n",
+    "axes_options = {'x': {'label': 'x'}, 'y': {'label': 'y'}}\n",
+    "fig = plt.figure(animation_duration=1000)\n",
+    "lines = plt.plot(x=x, y=y, colors=['darkorange', 'dodgerblue'], axes_options=axes_options)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update data of the line mark\n",
+    "lines.y = np.cumsum(np.random.randn(2, 100), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Non-clipped lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(100)\n",
+    "y1, y2 = np.random.randn(2, 100).cumsum(axis=1)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "plt.scales(scales={'x': bqp.LinearScale(min=10, max=90)})\n",
+    "line1 = plt.plot(x, y1, 'm', labels=['Clipped Line'], display_legend=True)\n",
+    "line2 = plt.plot(x, y2, 'y', apply_clip=False, labels=['Non clipped line'], display_legend=True)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Hand drawing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import to process datetime data\n",
+    "from datetime import datetime as py_dtime\n",
+    "\n",
+    "# Data\n",
+    "price_data = pd.DataFrame(np.cumsum(np.random.randn(150, 2).dot([[0.5, 0.4], [0.4, 1.0]]), axis=0) + 100,\n",
+    "                          columns=['Security 1', 'Security 2'],\n",
+    "                          index=pd.date_range(start='01-01-2007', periods=150))\n",
+    "\n",
+    "symbol = 'Security 1'\n",
+    "symbol2 = 'Security 2'\n",
+    "date_fmt = '%m-%d-%Y'\n",
+    "sec2_data = price_data[symbol2].values\n",
+    "dates = price_data.index.values\n",
+    "dates_actual = price_data.index.values\n",
+    "prices = price_data[symbol].values\n",
+    "\n",
+    "\n",
+    "# Chart\n",
+    "xs_hd = bqp.DateScale(min=np.datetime64(py_dtime(2007, 1, 1)))\n",
+    "ys_hd = bqp.LinearScale()\n",
+    "line_hd = bqp.Lines(x=dates_actual, y=sec2_data, scales={'x': xs_hd, 'y': ys_hd}, colors=['darkseagreen'])\n",
+    "\n",
+    "handdraw = bqp.interacts.HandDraw(lines=line_hd)\n",
+    "xax = bqp.Axis(scale=xs_hd, label='Date', grid_lines='none')\n",
+    "yax = bqp.Axis(scale=ys_hd, label='Price', orientation='vertical', grid_lines='none')\n",
+    "\n",
+    "bqp.Figure(marks=[line_hd], axes=[xax, yax], interaction=handdraw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_hd.y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Scatter Charts"
    ]
   },
@@ -428,8 +514,8 @@
     "                    colors=bqp.CATEGORY10, display_legend=True, tooltip=ttip)\n",
     "\n",
     "# Axes for both x and y\n",
-    "ax_x = bqp.Axis(scale=sc_x, label='Date')\n",
-    "ax_y = bqp.Axis(scale=sc_y, orientation='vertical', tick_format='0.0f')\n",
+    "ax_x = bqp.Axis(scale=sc_x, label='X Axis')\n",
+    "ax_y = bqp.Axis(scale=sc_y, orientation='vertical', tick_format='0.0f', label=\"Y-Axis\")\n",
     "\n",
     "# Figure object\n",
     "fig = bqp.Figure(marks=[scatt], axes=[ax_x, ax_y], title='Scatter Chart', animation_duration=1000)\n",
@@ -450,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regression = np.polyfit(x_data[:20], y_fake_dots, deg=2)\n",
+    "regression = np.polyfit(x_data[:20], y_fake_dots, deg=1)\n",
     "polyfit = np.polyval(regression, x_data)\n",
     "\n",
     "# Creating a line mark\n",
@@ -515,6 +601,219 @@
     "slider_scatt.observe(scatter_callback, 'value')\n",
     "\n",
     "widgets.VBox([slider_scatt, fig])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is great! But can we use the regression data generated after moving the dots?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ols_line.y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some more scatter chart examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Updating data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(animation_duration=1000)\n",
+    "x, y = np.random.rand(2, 20)\n",
+    "scatt = plt.scatter(x, y, colors=['yellowgreen'], axes_options=axes_options)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scatt.x = np.random.rand(20) * 10\n",
+    "scatt.y = np.random.rand(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bar Charts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some data\n",
+    "size = 100\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "x_data = range(size)\n",
+    "y_data = np.random.randn(size)\n",
+    "y_data_2 = np.random.randn(size)\n",
+    "y_data_3 = np.cumsum(np.random.randn(size) * 100.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_ord = bqp.OrdinalScale()\n",
+    "y_sc = bqp.LinearScale()\n",
+    "\n",
+    "bar = bqp.Bars(x=np.arange(1,11), y=np.arange(1,11), scales={'x': x_ord, 'y': y_sc}, colors=bqp.CATEGORY10)\n",
+    "ax_x = bqp.Axis(scale=x_ord)\n",
+    "ax_y = bqp.Axis(scale=y_sc, tick_format='0.2f', orientation='vertical')\n",
+    "\n",
+    "bqp.Figure(marks=[bar], axes=[ax_x, ax_y], padding_x=0.025, padding_y=0.025, animation_duration=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing the orientation\n",
+    "bar.orientation = 'horizontal'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding labels\n",
+    "bar.label_display = True\n",
+    "bar.label_display_format = '.1f'\n",
+    "bar.label_font_style = {'fill': 'white', 'font-size': '10px'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing opacities\n",
+    "bar.opacities = [0.5, 0.2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updating data\n",
+    "bar.orientation = 'vertical'\n",
+    "bar.opacities = [1]\n",
+    "bar.y = np.arange(-5,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### More interactions!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Callback for the selector\n",
+    "def brush_callback(change):\n",
+    "    if(not br_intsel.brushing):\n",
+    "        html_readout.value = \"<h1 style='color:linen'>Selected indices: {}-{}</h1>\".format(br_intsel.selected[0],br_intsel.selected[1])\n",
+    "        \n",
+    "        \n",
+    "# Chart\n",
+    "x_ord = bqp.OrdinalScale()\n",
+    "y_sc = bqp.LinearScale()\n",
+    "\n",
+    "bar = bqp.Bars(x=x_data, y=[y_data[:20], y_data_2[:20]], \n",
+    "           scales={'x': x_ord, 'y': y_sc}, padding=0.2,\n",
+    "           colors=bqp.CATEGORY10)\n",
+    "\n",
+    "br_intsel = bqp.interacts.BrushIntervalSelector(scale=x_ord, marks=[bar])\n",
+    "br_intsel.observe(brush_callback, names=['selected'])\n",
+    "br_intsel.observe(brush_callback, names=['brushing'])\n",
+    "\n",
+    "ax_x = bqp.Axis(scale=x_ord)\n",
+    "ax_y = bqp.Axis(scale=y_sc, orientation='vertical', tick_format='0.2f')\n",
+    "\n",
+    "fig = bqp.Figure(marks=[bar], axes=[ax_x, ax_y], interaction=br_intsel)\n",
+    "\n",
+    "# Some widgetry\n",
+    "html_readout = widgets.HTML(value=\"<h1 style='color:linen'>Selected indices will be displayed here</h1>\")\n",
+    "widgets.VBox([html_readout, fig])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Grouping can take different values!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# color_mode: {'auto', 'group', 'element', 'no_group'}\n",
+    "bar.color_mode = 'group'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# color_mode: {'auto', 'group', 'element', 'no_group'}\n",
+    "bar.color_mode = 'element'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# color_mode: {'auto', 'group', 'element', 'no_group'}\n",
+    "bar.color_mode = 'no_group'"
    ]
   }
  ],
