--- a/notebooks/Webinar_5/interactive_visualization.ipynb
+++ b/notebooks/Webinar_5/interactive_visualization.ipynb
@@ -41,7 +41,7 @@
     "There are many reasons, of course, but a few important ones which come to mind are:\n",
     "1. <span style=\"color: orange; font-size:16px\">Easier to read.</span> Think of the stock price of a company. If you want to see how the company has been doing over time, it's harder to try and read through the data in a tabular format. A line chart makes achieving this task much easier.\n",
     "2. <span style=\"color: orange; font-size:16px\">Quality check.</span> It is easier to detect outliers when looking at a chart compared to a table.\n",
-    "2. <span style=\"color: orange; font-size:16px\">Telling a story.</span>  \"A picture is worth a thousand words\" may sound like a cliche, but it really is not. A chart well done can convey a much more compelling story than narration.\n",
+    "2. <span style=\"color: orange; font-size:16px\">Telling a story.</span>  \"A picture is worth a thousand words\" may sound like a cliche, but it really is not. A chart well done can convey a much more compelling story than narration alone.\n",
     "3. <span style=\"color: orange; font-size:16px\">Summary statistics and other information which is derived from data can be very misleading.</span>  Point in case \"Datasaurus\".\n",
     "\n",
     "[Check out the Datasaurus example](datasaurus.ipynb)"
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Static vs. Dynamic Charts\n",
+    "### Static vs. dynamic Charts\n",
     "We always want to use the right tool for the job. What are the differences?\n",
     "\n",
     "- Static chart images are great for reports and other contexts where the image doesn't change frequently. Typically generated in some backend are saved to a file with come compression technique. \n",
@@ -189,7 +189,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pyplot"
+    "### BQPlot has two interfaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The pyplot interface"
    ]
   },
   {
@@ -214,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Object Model"
+    "### The object model interface"
    ]
   },
   {
@@ -387,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Two lines"
+    "##### Two lines on the y-axis"
    ]
   },
   {
@@ -411,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# update data of the line mark\n",
+    "# Update data of the line mark\n",
     "lines.y = np.cumsum(np.random.randn(2, 100), axis=1)"
    ]
   },
@@ -442,7 +449,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Hand drawing"
+    "##### Hand drawing - use as an input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No grid lines, either."
    ]
   },
   {
@@ -742,7 +756,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### More interactions!"
+    "### The interaction layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: orange; font-size:16px\">BQPlot has an interaction layer which you can overlay on any chart type. These include:</span>\n",
+    "\n",
+    "1. BrushIntervalSelector\n",
+    "2. FastIntervalSelector\n",
+    "3. HandDraw (which we have seen)\n",
+    "4. LassoSelector\n",
+    "5. MultiSelector\n",
+    "6. PanZoom\n",
+    "\n",
+    "Many others. Try them out!\n",
+    "\n",
+    "[BQplot github repo with examples](https://github.com/bqplot/bqplot)"
    ]
   },
   {
@@ -814,6 +846,13 @@
    "source": [
     "# color_mode: {'auto', 'group', 'element', 'no_group'}\n",
     "bar.color_mode = 'no_group'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: orange; font-size:20px\">Thank you!</span>"
    ]
   }
  ],
