add more content

--- a/notebooks/Webinar_5/interactive_visualization.ipynb
+++ b/notebooks/Webinar_5/interactive_visualization.ipynb
@@ -347,6 +347,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax_x.label_location = 'end'\n",
+    "ax_y.label_location = 'start'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,6 +391,123 @@
    "source": [
     "# If we don't like the legend\n",
     "line.display_legend=False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Additional properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "line = plt.plot(np.arange(10), np.arange(10), colors=['hotpink', 'orange'])\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Grid lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the grid lines of axes to dashed\n",
+    "xax, yax = plt.axes()['x'], plt.axes()['y']\n",
+    "\n",
+    "xax.grid_lines = 'dashed'\n",
+    "yax.grid_lines = 'dashed'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Side of axes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the side of the axis\n",
+    "yax.side = 'right'\n",
+    "xax.side = 'top'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Orientation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change the orientation of axes\n",
+    "yax.orientation = 'horizontal'\n",
+    "xax.orientation = 'vertical'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Axes color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the color of the axis\n",
+    "with xax.hold_sync():\n",
+    "    xax.color = 'orangered'\n",
+    "    xax.label_color = 'orangered'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Grid line colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the grid colors\n",
+    "xax.grid_color = 'red'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: hotpink; font-size:18px\">Additional customizations for axis properties such as tick marks etc. are available on the BQPlot examples folder in the github repo!</span>"
    ]
   },
   {
@@ -443,64 +570,6 @@
     "line1 = plt.plot(x, y1, 'm', labels=['Clipped Line'], display_legend=True)\n",
     "line2 = plt.plot(x, y2, 'y', apply_clip=False, labels=['Non clipped line'], display_legend=True)\n",
     "fig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Hand drawing - use as an input"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "No grid lines, either."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import to process datetime data\n",
-    "from datetime import datetime as py_dtime\n",
-    "\n",
-    "# Data\n",
-    "price_data = pd.DataFrame(np.cumsum(np.random.randn(150, 2).dot([[0.5, 0.4], [0.4, 1.0]]), axis=0) + 100,\n",
-    "                          columns=['Security 1', 'Security 2'],\n",
-    "                          index=pd.date_range(start='01-01-2007', periods=150))\n",
-    "\n",
-    "symbol = 'Security 1'\n",
-    "symbol2 = 'Security 2'\n",
-    "date_fmt = '%m-%d-%Y'\n",
-    "sec2_data = price_data[symbol2].values\n",
-    "dates = price_data.index.values\n",
-    "dates_actual = price_data.index.values\n",
-    "prices = price_data[symbol].values\n",
-    "\n",
-    "\n",
-    "# Chart\n",
-    "xs_hd = bqp.DateScale(min=np.datetime64(py_dtime(2007, 1, 1)))\n",
-    "ys_hd = bqp.LinearScale()\n",
-    "line_hd = bqp.Lines(x=dates_actual, y=sec2_data, scales={'x': xs_hd, 'y': ys_hd}, colors=['darkseagreen'])\n",
-    "\n",
-    "handdraw = bqp.interacts.HandDraw(lines=line_hd)\n",
-    "xax = bqp.Axis(scale=xs_hd, label='Date', grid_lines='none')\n",
-    "yax = bqp.Axis(scale=ys_hd, label='Price', orientation='vertical', grid_lines='none')\n",
-    "\n",
-    "bqp.Figure(marks=[line_hd], axes=[xax, yax], interaction=handdraw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_hd.y"
    ]
   },
   {
@@ -767,7 +836,7 @@
     "\n",
     "1. BrushIntervalSelector\n",
     "2. FastIntervalSelector\n",
-    "3. HandDraw (which we have seen)\n",
+    "3. HandDraw\n",
     "4. LassoSelector\n",
     "5. MultiSelector\n",
     "6. PanZoom\n",
@@ -775,6 +844,57 @@
     "Many others. Try them out!\n",
     "\n",
     "[BQplot github repo with examples](https://github.com/bqplot/bqplot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Hand drawing - use as an input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import to process datetime data\n",
+    "from datetime import datetime as py_dtime\n",
+    "\n",
+    "# Data\n",
+    "price_data = pd.DataFrame(np.cumsum(np.random.randn(150, 2).dot([[0.5, 0.4], [0.4, 1.0]]), axis=0) + 100,\n",
+    "                          columns=['Security 1', 'Security 2'],\n",
+    "                          index=pd.date_range(start='01-01-2007', periods=150))\n",
+    "\n",
+    "symbol = 'Security 1'\n",
+    "symbol2 = 'Security 2'\n",
+    "date_fmt = '%m-%d-%Y'\n",
+    "sec2_data = price_data[symbol2].values\n",
+    "dates = price_data.index.values\n",
+    "dates_actual = price_data.index.values\n",
+    "prices = price_data[symbol].values\n",
+    "\n",
+    "\n",
+    "# Chart\n",
+    "xs_hd = bqp.DateScale(min=np.datetime64(py_dtime(2007, 1, 1)))\n",
+    "ys_hd = bqp.LinearScale()\n",
+    "line_hd = bqp.Lines(x=dates_actual, y=sec2_data, scales={'x': xs_hd, 'y': ys_hd}, colors=['darkseagreen'])\n",
+    "\n",
+    "handdraw = bqp.interacts.HandDraw(lines=line_hd)\n",
+    "xax = bqp.Axis(scale=xs_hd, label='Date', grid_lines='none')\n",
+    "yax = bqp.Axis(scale=ys_hd, label='Price', orientation='vertical', grid_lines='none')\n",
+    "\n",
+    "bqp.Figure(marks=[line_hd], axes=[xax, yax], interaction=handdraw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_hd.y"
    ]
   },
   {
@@ -846,6 +966,172 @@
    "source": [
     "# color_mode: {'auto', 'group', 'element', 'no_group'}\n",
     "bar.color_mode = 'no_group'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More scales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have seen regular scales such as LinearScale, LogScale and OrdinalScale. But `BQPlot` has a few others which can be useful for various chart types."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ColorScale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data\n",
+    "np.random.seed(0)\n",
+    "n = 100\n",
+    "x_data = range(n)\n",
+    "y_data = np.cumsum(np.random.randn(n) * 100.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_fig(color_scale, color_data, fig_margin=None):\n",
+    "    # allow some margin on right for color bar\n",
+    "    if fig_margin is None:\n",
+    "        fig_margin = dict(top=50, bottom=70, left=50, right=100)\n",
+    "    fig = plt.figure(title='Up and Down', fig_margin=fig_margin)\n",
+    "    \n",
+    "    # setup color scale\n",
+    "    plt.scales(scales={'color': color_scale})\n",
+    "    \n",
+    "    # show color bar on right\n",
+    "    axes_options = {'color': {'orientation': 'vertical', 'side': 'right'}}\n",
+    "    scat = plt.scatter(x_data, y_data, color=color_data, stroke='black', axes_options=axes_options)\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = create_fig(bqp.ColorScale(), y_data)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: lawngreen; font-size:16px\">The color used for a given data point corresponds to its value. This is a great additional dimension to describe your data!</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can change the domain by adding constraints on 'min'/'max'\n",
+    "color_scale = fig.marks[0].scales['color']\n",
+    "color_scale.min = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_scale.reverse = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For diverging color schemes, we can also add a `mid` point to the scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_scale.min = None\n",
+    "color_scale.mid = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### DateColorScale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_margin = dict(top=50, bottom=70, left=50, right=200)\n",
+    "date_col_sc = bqp.DateColorScale()\n",
+    "dates = pd.date_range(start='2015-01-01', periods=n)\n",
+    "create_fig(date_col_sc, dates, fig_margin=fig_margin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing the domain\n",
+    "date_col_sc.min = datetime.date(2015, 2, 28)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also update the color schemes. Available options are:\n",
+    "```python\n",
+    "['Spectral', 'RdYlGn', 'RdBu', 'PiYG', 'PRGn', 'RdYlBu', 'BrBG', 'RdGy', 'PuOr']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_col_sc.scheme = 'Spectral'"
    ]
   },
   {
